--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
 
   <h3>Messages</h3>
   <!-- <script src="./messagesFile.js"></script> -->
-  <script src="./1000Messages.js"></script>
+  <!-- <script src="./1000Messages.js"></script> -->
+  <script src="./arrFile2.js"></script>
 
 
   <button id="renderBtn">Render Massages (CLICK ONLY AFTER THE LOADING IS FINISHED)</button>
