--- a/index.html
+++ b/index.html
@@ -73,14 +73,15 @@
   </p>
   <br>
 
+  <p><b>CLICK AGAIN ONLY AFTER THE BUTTON CHANGE ITS COLOR </b></p>
+
   <script src="./files/file_1.js"></script>
-  <script src="./files/file_2.js"></script>
+  <!-- <script src="./files/file_2.js"></script>
   <script src="./files/file_3.js"></script>
-  <script src="./files/file_4.js"></script>
+  <script src="./files/file_4.js"></script> -->
 
   <!-- <script src="./test100Messages.js"></script> -->
 
-  <p><b>CLICK ONLY AFTER THE LOADING IS FINISHED</b></p>
   <br>
   <button id="renderBtn">Render Massages From </button>
 
